--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<script src="https://gn-cdn.net/14kna2"></script>
+	<script src="https://gn-cdn.net/b9a83j"></script>
 	
 	<!-- Document Title
 	============================================= -->
